added linear gradietn background change

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 
 body {
   font-family: "montserrat";
-  background-color: #8AC4D0;
+  background-image: linear-gradient(to bottom right, #95E1D3, #bccea6);
   color: #fff;
 }
 
