--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,7 +11,8 @@
 
 body{
     font-family: 'montserrat';
-    background-color: #8AC4D0;
+    background-image: linear-gradient(to bottom right, #95E1D3, #bccea6);
+    // background-image: linear-gradient(to bottom right, #577d9c, #1e3475);
     color: #fff;
 }
 
