--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
 
 .container {
   width: 90%;
-  max-width: 400px;
+  max-width: 640px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -47,10 +47,10 @@ input {
 }
 
 .weather-icon {
-  margin-bottom: 0;
+  margin-bottom: 1em;
 }
 .weather-icon img {
-  width: 200px;
+  width: 280px;
 }
 
 .temperature {
@@ -59,33 +59,50 @@ input {
 }
 
 .min-max {
-  margin-bottom: 2em;
-  font-style: italic;
+  font-size: 1em;
+  font-weight: 300;
+  margin-bottom: 1em;
 }
 
-.location {
-  font-weight: 600;
-  font-size: 1.4em;
-}
-
-.extra-info {
-  width: 100%;
-  display: none;
-}
-.extra-info div {
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.extra-info img {
-  width: 40px;
-  margin-bottom: 0.5em;
+
+.location {
+  font-weight: 600;
+  font-size: 1.8em;
+}
+
+.extra-info {
+  display: none;
 }
 
 .extra-info.show {
+  width: 100%;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  font-size: 0.9em;
+}
+.extra-info.show p {
+  font-weight: bold;
+}
+
+@media screen and (min-width: 640px) {
+  body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .container {
+    min-height: 70vh;
+    padding: 2em;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
