--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,13 +12,18 @@
 body{
     font-family: 'montserrat';
     background-image: linear-gradient(to bottom right, #95E1D3, #bccea6);
-    // background-image: linear-gradient(to bottom right, #577d9c, #1e3475);
+    //clear and hot
+    // background-image: linear-gradient(to bottom right, #C94926, #BB9F34);
+    //Clear and cold
+    // background-image: linear-gradient(to bottom right, #89a1dd, #E4E5E7);
+    //Clear and night
+    // background-image: linear-gradient(to bottom right, #0b0b20, #4e4e50);
     color: #fff;
 }
 
 .container{
     width: 90%;
-    max-width: 400px;
+    max-width: 640px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -40,6 +45,7 @@ input{
     font-size: 1em;
     margin-bottom: 1em;
 }
+
 ::placeholder{
     color: rgba(255, 255, 255, 0.644);
 }
@@ -49,10 +55,10 @@ input{
 }
 
 .weather-icon{
-    margin-bottom: 0;
+    margin-bottom: 1em;
 
     img{
-        width: 200px;
+        width: 280px;
     }
 }
 
@@ -62,33 +68,37 @@ input{
 }
 
 .min-max{
-    margin-bottom: 2em;
-    font-style: italic;
+    font-size: 1em;
+    font-weight: 300;
+    margin-bottom: 1em;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .location{
     font-weight: 600;
-    font-size: 1.4em;
+    font-size: 1.8em;
 }
 
 .extra-info{
-    width: 100%;
     display: none;
-
-    div{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    img{
-        width: 40px;
-        margin-bottom: 0.5em;
-    }
 }
 
-.extra-info.show {
+.extra-info.show{
+    width: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    font-size: 0.9em;
+
+    p{
+        font-weight: bold;
+    }
 }
+
+@import 'media-queries';
