--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ main {
 
 .extra-info.show {
   width: 100%;
+  max-width: 400px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -91,18 +92,11 @@ main {
   font-weight: bold;
 }
 
-@media screen and (min-width: 640px) {
-  body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .container {
-    min-height: 70vh;
-    padding: 2em;
-  }
+.weather-description {
+  font-style: 1.2em;
+  margin-bottom: 0.5em;
+  text-transform: capitalize;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=styles.css.map */
