--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,10 +12,6 @@
 body{
     font-family: 'montserrat';
     background-image: linear-gradient(to bottom right, #95E1D3, #bccea6);
-    //clear and hot
-    // background-image: linear-gradient(to bottom right, #C94926, #BB9F34);
-    //Clear and cold
-    // background-image: linear-gradient(to bottom right, #89a1dd, #E4E5E7);
     //Clear and night
     // background-image: linear-gradient(to bottom right, #0b0b20, #4e4e50);
     color: #fff;
@@ -90,6 +86,7 @@ main{
 
 .extra-info.show{
     width: 100%;
+    max-width: 400px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -99,6 +96,13 @@ main{
     p{
         font-weight: bold;
     }
+}
+
+.weather-description{
+    font-style: 1.2em;
+    margin-bottom: 0.5em;
+    text-transform: capitalize;
+    font-weight: bold;
 }
 
 @import 'media-queries';
