continue work on celsius convertor

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,14 @@ body {
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   min-height: 100vh;
 }
 
 header h2 {
   text-transform: capitalize;
-  font-size: 3.7em;
+  font-size: 3em;
   margin-bottom: 0.3em;
 }
 header input {
@@ -44,11 +44,32 @@ header input::placeholder {
 header p {
   margin-bottom: 1.5em;
   line-height: 1.5em;
-  font-size: 1.1em;
+  font-size: 1em;
 }
 
 .submit {
   cursor: pointer;
+}
+
+.btn {
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #fff;
+  display: none;
+  width: 35px;
+  margin: 0 auto;
+  padding: 0.5em;
+  border-radius: 100%;
+  cursor: pointer;
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  transition: background-color 0.5s ease-in-out;
+  text-transform: uppercase;
+}
+
+.btn-change {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #A6D9C0;
 }
 
 .date {
@@ -56,13 +77,17 @@ header p {
   margin-top: 0.5em;
 }
 
+.weather-info {
+  display: none;
+}
+
 .weather-icon img {
-  width: 350px;
-  margin-bottom: 1.5em;
+  width: 280px;
+  margin-bottom: 1em;
 }
 
 .current-temp {
-  font-size: 7em;
+  font-size: 3.5em;
   font-weight: bold;
 }
 
@@ -77,20 +102,36 @@ header p {
 }
 
 .city {
-  font-size: 2.2em;
+  font-size: 2em;
   font-weight: bold;
   margin-top: 0.6em;
 }
 
 .extra-weather-info {
-  display: flex;
+  display: none;
   justify-content: space-between;
-  align-items: center;
+  align-self: center;
   width: 600px;
 }
 .extra-weather-info p {
   font-weight: bold;
   text-transform: capitalize;
+}
+
+.change-layout {
+  justify-content: space-between;
+}
+
+.show {
+  display: block;
+}
+
+.show-extra {
+  display: flex;
+}
+
+.hide {
+  display: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
