--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -92,6 +92,16 @@ header{
     img{
         width: 280px;
         margin-bottom: 1em;
+        animation: zoom 5s infinite;
+    }
+}
+
+@keyframes zoom{
+    0%, 100%{
+        transform: scale(1) rotate(0deg);
+    }
+    50%{
+        transform: scale(1.2) rotate(100deg);
     }
 }
 
