--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -92,16 +92,35 @@ header{
     img{
         width: 280px;
         margin-bottom: 1em;
-        animation: zoom 5s infinite;
     }
 }
 
-@keyframes zoom{
+.spin{
+    animation: spin 5s infinite;
+}
+
+.move{
+    animation: move 6s infinite linear;
+}
+
+@keyframes move{
     0%, 100%{
-        transform: scale(1) rotate(0deg);
+        transform: translateX(0);
+    }25%{
+        transform: translateX(20px);
+    }50%{
+        transform: translateX(0px);
+    }75%{
+        transform: translateX(-20px);
     }
-    50%{
-        transform: scale(1.2) rotate(100deg);
+    
+}
+
+@keyframes spin{
+    0%, 100%{
+        transform: rotate(0deg);
+    }50%{
+        transform: rotate(180deg);
     }
 }
 
