font size input changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ header p {
   text-transform: capitalize;
   opacity: 0;
   transition: all 0.8s ease;
+  font-size: 1em;
 }
 .search-box.fade {
   opacity: 1;
@@ -152,6 +153,7 @@ header p {
 .weather-description {
   font-size: 1.4em;
   font-weight: bold;
+  text-transform: capitalize;
 }
 
 .min-max {
