--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-  width: 95%;
+  width: 90%;
   margin: 0 auto;
   padding: 1em 0;
   max-width: 700px;
@@ -24,22 +24,11 @@ body {
   height: 100vh;
 }
 
-header h2 {
-  text-transform: capitalize;
-  font-size: 3em;
-  margin-bottom: 0.3em;
-}
-header p {
-  margin-bottom: 1.5em;
-  line-height: 1.5em;
-  font-size: 1em;
-}
-
 .search-box {
   border: none;
   outline: none;
   padding: 1em;
-  border-radius: 5px 15px 5px 15px;
+  border-radius: 25px;
   background-color: rgba(255, 255, 255, 0.3);
   color: #fff;
   text-transform: capitalize;
@@ -57,7 +46,15 @@ header p {
 .app-description {
   max-width: 550px;
 }
+.app-description h2 {
+  text-transform: capitalize;
+  font-size: 2.8em;
+  margin-bottom: 0.3em;
+}
 .app-description p {
+  margin-bottom: 1.5em;
+  line-height: 1.5em;
+  font-size: 1em;
   opacity: 0;
   transition: all 0.8s ease;
 }
@@ -72,33 +69,8 @@ header p {
   opacity: 1;
 }
 
-.submit {
-  cursor: pointer;
-}
-
-.btn {
-  background-color: rgba(255, 255, 255, 0.3);
-  color: #fff;
-  display: none;
-  width: 35px;
-  margin: 0 auto;
-  padding: 0.5em;
-  border-radius: 100%;
-  cursor: pointer;
-  position: absolute;
-  top: 1em;
-  right: 1em;
-  transition: background-color 0.5s ease-in-out;
-  text-transform: uppercase;
-}
-
-.btn-change {
-  background-color: rgba(255, 255, 255, 0.8);
-  color: #A6D9C0;
-}
-
 .date {
-  font-size: 1.5em;
+  font-size: 1em;
   margin-top: 0.5em;
 }
 
@@ -107,8 +79,8 @@ header p {
 }
 
 .weather-icon img {
-  width: 230px;
-  margin-bottom: 1em;
+  width: 180px;
+  margin-bottom: 0.5em;
 }
 
 .spin {
@@ -117,10 +89,6 @@ header p {
 
 .move {
   animation: move 6s infinite linear;
-}
-
-.change-color {
-  color: pink;
 }
 
 @keyframes move {
@@ -146,7 +114,7 @@ header p {
   }
 }
 .current-temp {
-  font-size: 3.5em;
+  font-size: 2em;
   font-weight: bold;
 }
 
@@ -157,12 +125,12 @@ header p {
 }
 
 .min-max {
-  font-size: 1.1em;
+  font-size: 1em;
   font-style: italic;
 }
 
 .city {
-  font-size: 2em;
+  font-size: 1.8em;
   font-weight: bold;
   margin-top: 0.6em;
 }
@@ -175,9 +143,12 @@ header p {
   max-width: 300px;
 }
 .extra-weather-info p {
-  font-weight: bold;
   text-transform: capitalize;
-  font-size: 0.7em;
+  font-size: 0.8em;
+}
+.extra-weather-info span {
+  font-size: 1.1em;
+  font-weight: bold;
 }
 
 .change-layout {
