changed layout for mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -193,7 +193,7 @@ body{
 //Edit layout on larger devices
 
 .change-layout{
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .show{
