added five day forecast

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,14 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+}
+
+.five-day-container {
+  width: 90%;
+  margin: 0 auto;
+  padding-bottom: 2em;
+  display: none;
 }
 
 .search-box {
@@ -48,7 +55,7 @@ body {
 }
 .app-description h2 {
   text-transform: capitalize;
-  font-size: 2.8em;
+  font-size: 2.5em;
   margin-bottom: 0.3em;
 }
 .app-description p {
@@ -91,6 +98,10 @@ body {
   animation: move 6s infinite linear;
 }
 
+.zoom {
+  animation: zoom 5s infinite;
+}
+
 @keyframes move {
   0%, 100% {
     transform: translateX(0);
@@ -111,6 +122,14 @@ body {
   }
   50% {
     transform: rotate(180deg);
+  }
+}
+@keyframes zoom {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
   }
 }
 .current-temp {
@@ -149,6 +168,28 @@ body {
 .extra-weather-info span {
   font-size: 1.1em;
   font-weight: bold;
+}
+
+.five-day-forecast {
+  width: 100%;
+}
+.five-day-forecast ul {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  list-style-type: none;
+  text-transform: capitalize;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+.five-day-forecast ul li {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.five-day-forecast ul li:not(:last-child) {
+  margin-bottom: 2em;
 }
 
 .change-layout {
