changed buton to div

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ body {
   cursor: pointer;
   transition: all 0.8s ease;
   opacity: 0;
+  text-transform: capitalize;
 }
 .current-btn.fade {
   opacity: 1;
