--- a/css/styles.css
+++ b/css/styles.css
@@ -77,18 +77,16 @@ body {
 }
 
 .current-btn {
-  padding: 1em;
-  border: none;
-  border-radius: 20px;
   display: inline-block;
-  background-color: rgba(255, 255, 255, 0.4);
   color: #fff;
-  font-weight: bold;
-  font-size: 0.7em;
   cursor: pointer;
   transition: all 0.8s ease;
   opacity: 0;
   text-transform: capitalize;
+}
+.current-btn i {
+  font-size: 2em;
+  transition: opacity 0.8s ease;
 }
 .current-btn.fade {
   opacity: 1;
@@ -240,6 +238,11 @@ body {
   }
   .extra-weather-info p {
     font-size: 1.1em;
+  }
+}
+@media (hover: hover) {
+  .current-btn i:hover {
+    opacity: 0.7;
   }
 }
 
