--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -87,18 +87,17 @@ body{
 
 //Current button
 .current-btn{
-    padding: 1em;
-    border: none;
-    border-radius: 20px;
     display: inline-block;
-    background-color: rgba(255, 255, 255, 0.4);
     color: #fff;
-    font-weight: bold;
-    font-size: 0.7em;
     cursor: pointer;
     transition: all 0.8s ease;
     opacity: 0;
     text-transform: capitalize;
+
+    i{
+        font-size: 2em;
+        transition: opacity 0.8s ease;
+    }
 
     &.fade{
         opacity: 1;
