--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,6 +13,7 @@ body{
     color: #fff;
 }
 
+//Main container
 .container{
     width: 90%;
     margin: 0 auto;
@@ -26,14 +27,10 @@ body{
     min-height: 100vh;
 }
 
-.five-day-container{
-    width: 90%;
-    margin: 0 auto;
-    padding-bottom: 2em;
-    display: none;
-}
-
+//Search input
 .search-box{
+    display: block;
+    margin: 0 auto;
     border: none;
     outline: none;
     padding: 1em;
@@ -54,6 +51,7 @@ body{
     }
 }
 
+//Intro text
 .app-description{
     max-width: 550px;
 
@@ -85,7 +83,7 @@ body{
     }
 }
 
-//Current button
+//Current location search button
 .current-btn{
     display: inline-block;
     color: #fff;
@@ -93,14 +91,13 @@ body{
     transition: all 0.8s ease;
     opacity: 0;
     text-transform: capitalize;
+    outline: none;
+    -webkit-tap-highlight-color: transparent;
 
     i{
         font-size: 2em;
         transition: opacity 0.8s ease;
-
-        &:focus{
-            outline: none;
-        }
+        margin-top: 0.3em;
     }
 
     &.fade{
@@ -108,36 +105,56 @@ body{
     }
 }
 
-//Celsius to Fahrenheit
-
-// .btn{
-//     background-color: rgba(255, 255, 255, 0.3);
-//     color: #fff;
-//     display: none;
-//     width: 35px;
-//     margin: 0 auto;
-//     padding: 0.5em;
-//     border-radius: 100%;
-//     cursor: pointer;
-//     position: absolute;
-//     top:1em;
-//     right:1em;
-//     transition: background-color 0.5s ease-in-out;
-//     text-transform: uppercase;
-// }
-
-// .btn-change{
-//     background-color: rgba(255, 255, 255, 0.8);
-//     color: #A6D9C0;
-// }
-
+//Todays date
 .date{
     font-size: 1em;
     margin-top: 0.5em;
 }
 
+//Weather information container - hidden on page load
 .weather-info{
     display: none;
+}
+
+//Weather information
+.current-temp{
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.weather-description{
+    font-size: 1.4em;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
+.min-max{
+    font-size: 1em;
+    font-style: italic;
+}
+
+.city{
+    font-size: 1.8em;
+    font-weight: bold;
+    margin-top: 0.6em;
+}
+
+.extra-weather-info{
+    display: none;
+    justify-content: space-between;
+    align-self: center;
+    width: 100%;
+    max-width: 300px;
+
+    p{
+        text-transform: capitalize;
+        font-size: 0.8em;
+    }
+
+    span{
+        font-size: 1.1em;
+        font-weight: bold;
+    }
 }
 
 .weather-icon{
@@ -148,7 +165,6 @@ body{
 }
 
 //Weather icon animations
-
 .spin{
     animation: spin 5s infinite;
 }
@@ -190,76 +206,7 @@ body{
     }
 }
 
-//Weather information
-
-.current-temp{
-    font-size: 2em;
-    font-weight: bold;
-}
-
-.weather-description{
-    font-size: 1.4em;
-    font-weight: bold;
-    text-transform: capitalize;
-}
-
-.min-max{
-    font-size: 1em;
-    font-style: italic;
-}
-
-.city{
-    font-size: 1.8em;
-    font-weight: bold;
-    margin-top: 0.6em;
-}
-
-.extra-weather-info{
-    display: none;
-    justify-content: space-between;
-    align-self: center;
-    width: 100%;
-    max-width: 300px;
-
-    p{
-        text-transform: capitalize;
-        font-size: 0.8em;
-    }
-
-    span{
-        font-size: 1.1em;
-        font-weight: bold;
-    }
-}
-
-//Five day forecast
-.five-day-forecast{
-    width: 100%;
-
-    ul{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        list-style-type: none;
-        text-transform: capitalize;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-
-        li{
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-        }
-
-        li:not(:last-child){
-            margin-bottom: 2em;
-        }
-    }
-}
-
 //Edit layout on larger devices
-
 .change-layout{
     justify-content: space-around;
 }
