--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,9 @@ body {
   align-items: center;
   min-height: 100vh;
 }
+.container.fade-out {
+  opacity: 0.2;
+}
 
 .search-box {
   display: block;
@@ -71,6 +74,46 @@ body {
   opacity: 1;
 }
 
+.load-container {
+  margin-top: 1em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+.load-container.show {
+  display: block;
+}
+
+.line {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  background-color: #fff;
+}
+
+.load .line:nth-last-child(1) {
+  animation: loading 0.7s 0.2s linear infinite;
+}
+
+.load .line:nth-last-child(2) {
+  animation: loading 0.7s 0.3s linear infinite;
+}
+
+.load .line:nth-last-child(3) {
+  animation: loading 0.7s 0.4s linear infinite;
+}
+
+@keyframes loading {
+  0%, 100% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+}
 .current-btn {
   display: inline-block;
   color: #fff;
