--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,6 +25,10 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+
+    &.fade-out{
+        opacity: 0.2;
+    }
 }
 
 //Search input
@@ -80,6 +84,48 @@ body{
         &.fade{
             opacity: 1;
         }
+    }
+}
+
+//Loading animation
+.load-container {
+   margin-top: 1em;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   display: none;
+   
+
+   &.show{
+       display: block;
+   }
+}
+
+.line {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    background-color: #fff;
+}
+
+.load .line:nth-last-child(1) {
+    animation: loading 0.7s 0.2s linear infinite;
+}
+.load .line:nth-last-child(2) {
+    animation: loading 0.7s 0.3s linear infinite;
+}
+.load .line:nth-last-child(3) {
+    animation: loading 0.7s 0.4s linear infinite;
+}
+
+@keyframes loading {
+    0%, 100% {
+      transform: translate(0, 0);
+    }
+    50% {
+      transform: translate(0, 15px);
     }
 }
 
